<?xml version="1.0"?>

<package>
  <name>drill_msgs</name>
  <version>1.0.0</version>
  <description>The drill_msgs - message for drill positions</description>

  <author email="luandoan263@gmail.com"> LUAN DOAN </author>

  <maintainer email="luandoan263@gmail.com">luan doan</maintainer>
  <license>BSD</license>

  <url type="repository">http://github.com/luandoan/husky_ur5</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export> </export>
</package>
