<?xml version="1.0"?>
<package>
  <name>drill_description</name>
  <version>1.0.0</version>
  <description>The drill_description package</description>

  <maintainer email="luandoan263@gmail.com">luan</maintainer>
  <author email="luandoan@vt.edu">luan</author>

  <url type="repository">https://github.com/luandoan/husky/src/drill</url>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  
  <export>
   
  </export>
</package>
